Adding the create template endpoint
